# MandelbrotInCWithRaylib

./: CMakeLists.txt  mandelbrot.c  mandelbrotWithShader.c  shader.fs  shader.glsl
Old Stable Things/: mandelbrot.c
